# mcp

./: LICENSE  README.md
src/baidu-shopping/mcp_server_python/: README.md  __init__.py  __main__.py  pyproject.toml  shopping.py
